# AlgorithmsDataStructures

./: .gitignore  CMakeLists.txt  README.md  makefile  makefile.old  tsconfig.json
src/: BST.cpp  BST.h  BST.ts  app.cpp  app.ts
src/algorithms/: Sorting.h
src/data_structures/: BST.cpp  BST.h  BST.ts
src/programs/: BSTProgram.h  IProgram.h  Programs.h  QuickSortProgram.h
